--- a/navbarlogin.html
+++ b/navbarlogin.html
@@ -1,6 +1,6 @@
 <link href="../css/navbar.css" rel="stylesheet">
 <header id="navbar">
-    <a href="https://majinbu-3000.ecole-404.com/main.php" id="home"><img src="./assets/page-daccueil.png"></a>
+    <a href="https://majinbu-3000.ecole-404.com/main.php" id="home"><img src="../assets/page-daccueil.png"></a>
     <div id="nav-mid">
         <a href="story/StoryCreate.php" id="creation">CREER</a>
     </div>
